--- a/Views/Demo/Index.cshtml
+++ b/Views/Demo/Index.cshtml
@@ -8,6 +8,10 @@
         <input type="text" name="heSoB"
     </p>
     <p>
+        <label>Hệ Số C :</label>
+        <input type="text" name="heSoC">
+    </p>
+    <p>
         <input type="submit" value="Giải phương trình">
     </p>
 </form>
