--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -23,7 +23,18 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Demo" asp-action="XuLyChuoi">XOÁ KHOẢNG TRẮNG</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Demo" asp-action="XuLyChuoi1">VIẾT HOA CHUỖI</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Demo" asp-action="VietThuong">VIẾT THƯỜNG CHUỖI</a>
+                        </li>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Demo" asp-action="VietHoaKiTuDau">VIẾT HOA KÝ TỰ ĐẦU</a>
                         </li>
                     </ul>
                 </div>
